Wed Aug 27 19:52:33 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (vtdate2rbtime): try to convert millisecond
	  of VT_DATE VARIANT to nsec of Time object.
	* test/win32ole/test_win32ole_variant.rb
	  (test_conversion_dbl2date_with_msec): ditto.

Wed Aug 27 09:57:29 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_complex.rb: removed unreachable code.
	* test/ruby/test_rational.rb: ditto.

Wed Aug 27 07:59:17 2014  Eric Wong  <e@80x24.org>

	* compile.c (iseq_set_sequence): check for multiplication overflow

Tue Aug 26 22:07:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_complex.rb: cherry-picked working assertions from r47251.
	* test/ruby/test_rational.rb: cherry-picked working assertions from r47263.

Tue Aug 26 21:07:56 2014  gogo tanaka  <mail@tanakakazuki.com>

	* lib/mathn.rb (Fixnum#**, Bignum#**, Float#**, Rational#**):
	  remove as these are now built-in.  [ruby-core:63973] [Bug #10086]

Tue Aug 26 20:46:55 2014  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_time_unmagnify_to_float): Avoid double rounding.
	  Reported by Tsuyoshi Sawada.
	  https://bugs.ruby-lang.org/issues/10135#note-1

Tue Aug 26 17:12:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_close): ignore only "closed stream" IOError and
	  NoMethodError, do not swallow other exceptions at the end of
	  block.  [ruby-core:64463] [Bug #10153]

Tue Aug 26 13:46:33 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* template/fake.rb.in: fix failed to make install when srcdir !=
	  builddir.

Tue Aug 26 13:43:50 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_range.rb: added workaround for VERBOSE message.

Tue Aug 26 12:38:02 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_mathn.rb: added workaround for VERBOSE messages.

Tue Aug 26 11:44:04 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/shell/process-controller.rb: removed commented-out code.
